Add log rotation to GC Logging.